Styling refactor addressing issues on safari and iOS

--- a/src/components/founders/_styles.scss
+++ b/src/components/founders/_styles.scss
@@ -29,7 +29,8 @@
     max-width: 100%;
 
     @include lg {
-      max-width: 360px;
+      min-width: 360px;
+      max-width: 380px;
     }
   }
 
@@ -38,7 +39,8 @@
     order: 1;
 
     @include lg {
-      max-width: 360px;
+      min-width: 360px;
+      max-width: 380px;
     }
   }
 
